--- a/findtaxa/README.Rmd
+++ b/findtaxa/README.Rmd
@@ -27,6 +27,7 @@ A `Newick` format tree with tip names generally with host and subtype informatio
 
 ## Function
 
+Direct copy and run in R or soucre("file_with_function.R").
 
 ```{r}
 
@@ -214,6 +215,8 @@ tiptree
 
 
 The Warning message from one tip name with "bird".
+
+
 
 
 
